<resources>
    <string name="app_name">MvpStarter</string>

    <string name="dialog_action_ok">OK</string>
    <!--<string name="dialog_action_cancel">Cancel</string>-->
    <string name="dialog_error_title">Sorry</string>

    <!-- Detail Activity -->
    <!--<string name="text_pokemon_id">Id: %s</string>-->
    <!--<string name="text_pokemon_name">Name: %s</string>-->
    <!--<string name="text_pokemon_experience">Experience: %s</string>-->

    <!-- Error View -->
    <string name="error_title">Oops</string>
    <string name="error_message">There was a problem loading the pokemon, please try again!</string>
    <string name="error_reload">Reload</string>
    <string name="title_activity_maps_sample">Map</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="health_profile">Health Profile</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="is_pregnant">Is Pregnant</string>
    <string name="is_vegetarian">Is Vegetarian</string>
    <string name="add_disease">+ Add Disease</string>
    <string name="save">Save</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="my_diet">My Diet</string>
    <string name="email_hint">your email</string>
    <string name="password_hint">new password</string>
    <string name="confirm_password_hint">confirm password</string>
    <string name="my_health_profile">My Health Profile</string>
    <string name="my_progress">My Progress</string>
    <string name="my_diet_plan">My Diet Plan</string>
    <string name="add_plan">Add Plan</string>
    <string name="duration">Duration</string>
    <string name="target_duration_hint">target duration</string>
    <string name="target_weight">Target Weight</string>
    <string name="target_weight_hint">target weight</string>
    <string name="plan_name_hint">plan name</string>
</resources>
